--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "MiSans VF", MiSans, system-ui, sans-serif;
 }
 
 body {
@@ -97,7 +98,7 @@ body {
     letter-spacing: 0.20rem;
     margin-top: 50px;
     margin-bottom: 20px;
-    max-width: 480px;
+    max-width: 545px;
   }
   
   /* Animation */
@@ -114,7 +115,7 @@ body {
   
   @keyframes animated-text{
     from{width: 0%;}
-    to{width: 480px;}
+    to{width: 545px;}
   }
   
   /* cursor animations */
@@ -342,7 +343,7 @@ form button {
             animated-cursor 750ms steps(16,end) infinite;
         margin-bottom: 10px;
         margin-top: 30px;
-        max-width: 330px;
+        max-width: 375px;
     }
 }
 
@@ -355,7 +356,7 @@ form button {
         animation: 
             animated-text 3.5s steps(16,end) 0.5s 1 normal both,
             animated-cursor 750ms steps(16,end) infinite;
-        max-width: 255px;
+        max-width: 290px;
     }
 }
 
