--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    font-family: 'Work Sans', sans-serif;
+    font-family: "MiSans VF", MiSans, system-ui, sans-serif;
     min-height: 100vh;
     padding-top: 3%;
 }
@@ -103,15 +103,23 @@ body {
   
   /* Animation */
 #title {
-    animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
+    -webkit-animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
+        animated-cursor 750ms steps(11,end) infinite;
+            animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
         animated-cursor 750ms steps(11,end) infinite;
   }
 
 #title.darker-title {
-    animation: animated-text 2s steps(11,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11,end) infinite;
+    -webkit-animation: animated-text 2s steps(11,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11,end) infinite;
+            animation: animated-text 2s steps(11,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11,end) infinite;
 }
   
   /* text animation */
+  
+  @-webkit-keyframes animated-text{
+    from{width: 0%;}
+    to{width: 545px;}
+  }
   
   @keyframes animated-text{
     from{width: 0%;}
@@ -120,8 +128,18 @@ body {
   
   /* cursor animations */
   
+  @-webkit-keyframes animated-cursor{
+    from{border-right-color: rgba(0, 0, 0, 0.75);}
+    to{border-right-color: transparent;}
+  }
+  
   @keyframes animated-cursor{
     from{border-right-color: rgba(0, 0, 0, 0.75);}
+    to{border-right-color: transparent;}
+  }
+
+  @-webkit-keyframes darker-animated-cursor {
+    from{border-right-color: #01394c;}
     to{border-right-color: transparent;}
   }
 
@@ -164,6 +182,26 @@ form input.light-input {
     color: #1a150e;
 }
 
+form input.light-input::-webkit-input-placeholder {
+    color: #1a150e;
+    opacity: 0.7;
+}
+
+form input.light-input::-moz-placeholder {
+    color: #1a150e;
+    opacity: 0.7;
+}
+
+form input.light-input:-ms-input-placeholder {
+    color: #1a150e;
+    opacity: 0.7;
+}
+
+form input.light-input::-ms-input-placeholder {
+    color: #1a150e;
+    opacity: 0.7;
+}
+
 form input.light-input::placeholder {
     color: #1a150e;
     opacity: 0.7;
@@ -172,6 +210,26 @@ form input.light-input::placeholder {
 form input.darker-input {
     background-color: #01394c;
     color: white;
+}
+
+form input.darker-input::-webkit-input-placeholder {
+    color: white;
+    opacity: 0.7;
+}
+
+form input.darker-input::-moz-placeholder {
+    color: white;
+    opacity: 0.7;
+}
+
+form input.darker-input:-ms-input-placeholder {
+    color: white;
+    opacity: 0.7;
+}
+
+form input.darker-input::-ms-input-placeholder {
+    color: white;
+    opacity: 0.7;
 }
 
 form input.darker-input::placeholder {
@@ -338,7 +396,10 @@ form button {
     }
 
     #title {
-        animation: 
+        -webkit-animation: 
+            animated-text 3s steps(16,end) 0.5s 1 normal both,
+            animated-cursor 750ms steps(16,end) infinite;
+                animation: 
             animated-text 3s steps(16,end) 0.5s 1 normal both,
             animated-cursor 750ms steps(16,end) infinite;
         margin-bottom: 10px;
@@ -353,7 +414,10 @@ form button {
     }
 
     #title {
-        animation: 
+        -webkit-animation: 
+            animated-text 3.5s steps(16,end) 0.5s 1 normal both,
+            animated-cursor 750ms steps(16,end) infinite;
+                animation: 
             animated-text 3.5s steps(16,end) 0.5s 1 normal both,
             animated-cursor 750ms steps(16,end) infinite;
         max-width: 290px;
